--- a/SMS_Presentation/Views/ContaReceber/LiquidarParcelaCR.cshtml
+++ b/SMS_Presentation/Views/ContaReceber/LiquidarParcelaCR.cshtml
@@ -1,7 +1,362 @@
-﻿
+﻿@using Presentation.Extensions
+@model SMS_Solution.ViewModels.ContaReceberParcelaViewModel
 @{
-    ViewBag.Title = "LiquidarParcelaCR";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title"> 
+        <h3 class="title">Contas a Receber</h3> 
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaCR", "ContaReceber")">Contas a Receber</a>
+            </li>
+            <li>
+                <a href="@Url.Action("EditarCR", "ContaReceber")">Contas a Receber - Edição</a>
+            </li>
+            <li class="active">
+                <strong>Parcela de Conta a Receber - Liquidação</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
 
-<h2>LiquidarParcelaCR</h2>
+    <div class="row">
+        <div class="col-lg-2">
+            <div class="widget style1 yellow-bg">
+                <div class="row vertical-align">
+                    <div class="col-xs-3">
+                        <i class="fa fa-thumbs-o-up fa-3x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        @if (Model.CRPA_IN_QUITADA == 0)
+	                    {
+                            <h3 class="font-normal">Em Aberto</h3>
+                        }
+                        else
+                        {
+                            <h3 class="font-normal">Liquidada</h3>
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-2">
+            <div class="widget style1 navy-bg">
+                <div class="row vertical-align">
+                    <div class="col-xs-3">
+                        <i class="fa fa-thumbs-o-up fa-3x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        <h3 class="font-normal">Vencimento: @Model.CRPA_DT_VENCIMENTO.Value.ToShortDateString()</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Parcela de Conta a Receber - Liquidação</h5>
+                </div>
+
+                <div class="ibox-content">
+                    @if (!ViewData.ModelState.IsValid)
+                    {
+                        <div class="alert alert-danger">
+                            <button type="button" class="close" data-dismiss="alert">Fechar</button>
+                            @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+                        </div>
+                    }
+                    <div class="tabs-container">
+                        <ul class="nav nav-tabs">
+                            <li class="active"><a data-toggle="tab" href="#tab-1">Dados Financeiros</a></li>
+                        </ul>
+                        <div class="tab-content">
+
+                            @*Dados Financeiros*@
+                            <div id="tab-1" class="tab-pane active">
+                                <div class="panel-body">
+                                    @using (Html.BeginForm("LiquidarParcelaCR", "ContaReceber", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", @id="pwd-container1" }))
+                                    {
+                                        <div class="row">
+                                            <hr />
+                                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">                
+                                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                                    @Html.AntiForgeryToken()
+                                                    @Html.HiddenFor(m => m.CARE_CD_ID)
+                                                    @Html.HiddenFor(m => m.CRPA_CD_ID)
+                                                    @Html.HiddenFor(m => m.CRPA_DS_DESCRICAO)
+                                                    @Html.HiddenFor(m => m.CRPA_DT_VENCIMENTO)
+                                                    @Html.HiddenFor(m => m.CRPA_IN_ATIVO)
+                                                    @Html.HiddenFor(m => m.CRPA_IN_PARCELA)
+                                                    @Html.HiddenFor(m => m.CRPA_IN_QUITADA)
+                                                    @Html.HiddenFor(m => m.CRPA_NR_PARCELA)
+                                                    Num.Parcela
+                                                    @Html.TextBoxFor(m => m.CRPA_IN_PARCELA, new { @class = "form-control", autofocus = true, @readonly = "readonly" })
+                                                </div>
+                                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                                    Data de Vencimento
+                                                    @Html.TextBoxFor(m => m.CRPA_DT_VENCIMENTO, "{0:dd/MM/yyyy}", new { @class = "form-control", autofocus = true , @readonly="readonly"})
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <hr />
+                                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">                
+                                                @if (Model.CRPA_IN_QUITADA == 0)
+	                                            {
+                                                    <div class="col-lg-2 col-md-2 col-xs-12">
+                                                        Data Liquidação
+                                                        @Html.TextBoxFor(m => m.CRPA_DT_QUITACAO, "{0:dd/MM/yyyy}", new { @class = "form-control date-picker", autofocus = true})
+                                                        @Html.ValidationMessageFor(m => m.CRPA_DT_QUITACAO, "",new { @style="color:red" })
+                                                    </div>
+                                                    <div class="col-lg-2 col-md-2 col-xs-12">
+                                                        Valor Original
+                                                        @Html.TextBoxFor(m => m.CRPA_VL_VALOR, "{0:n2}", new { @class = "form-control", autofocus = true , @readonly="readonly", @id = "valor"})
+                                                    </div>
+                                                    <div class="col-lg-2 col-md-2 col-xs-12">
+                                                        Descontos(-)
+                                                        @Html.TextBoxFor(m => m.CRPA_VL_DESCONTO, "{0:n2}", new { @class = "form-control", autofocus = true, @id = "desc", onkeyup = "sum()"})
+                                                        @Html.ValidationMessageFor(m => m.CRPA_VL_DESCONTO, "",new { @style="color:red" })
+                                                    </div>
+                                                    <div class="col-lg-2 col-md-2 col-xs-12">
+                                                        Juros (+)
+                                                        @Html.TextBoxFor(m => m.CRPA_VL_JUROS,"{0:n2}", new { @class = "form-control", autofocus = true, @id = "juro", onkeyup = "sum()"})
+                                                        @Html.ValidationMessageFor(m => m.CRPA_VL_JUROS, "",new { @style="color:red" })
+                                                    </div>
+                                                    <div class="col-lg-2 col-md-2 col-xs-12">
+                                                        Taxas (+)
+                                                        @Html.TextBoxFor(m => m.CRPA_VL_TAXAS, "{0:n2}", new { @class = "form-control", autofocus = true, @id = "taxa", onkeyup = "sum()"})
+                                                        @Html.ValidationMessageFor(m => m.CRPA_VL_TAXAS, "",new { @style="color:red" })
+                                                    </div>
+                                                    <div class="col-lg-2 col-md-2 col-xs-12">
+                                                        Valor Recebido (=)
+                                                        @Html.TextBoxFor(m => m.CRPA_VL_RECEBIDO, "{0:n2}", new { @class = "form-control", autofocus = true, @id = "rec", onkeyup = "sum()"})
+                                                        @Html.ValidationMessageFor(m => m.CRPA_VL_RECEBIDO, "",new { @style="color:red" })
+                                                    </div>
+	                                            }   
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <br />
+                                            @Html.ButtonActionSubmit(text: "Confirma Liquidação da Parcela", htmlAttributes: new { id = "basictoast" })
+                                            @Html.ButtonLinkIndex(text: "Voltar", action: "VoltarAnexoCR", controller: "ContaReceber")
+                                        </div>
+                                    }
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </div>
+    </div>
+</div>
+
+@section Styles {
+    <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />  
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
+    @Styles.Render("~/Content/plugins/iCheck/iCheckStyles")
+    @Styles.Render("~/plugins/toastrStyles")
+    @Styles.Render("~/plugins/touchSpinStyles")
+    @Styles.Render("~/plugins/sweetAlertStyles")
+}
+@section Scripts {
+    @Scripts.Render("~/plugins/toastr")
+    
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    @Scripts.Render("~/plugins/touchSpin")
+    @Scripts.Render("~/plugins/iCheck")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+    
+   
+
+    <script type="text/javascript" language="javascript">
+        $(function () {
+            $('.date-picker').datepicker(
+                {
+                    dateFormat: 'dd/mm/yy',
+                    dayNames: ['Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'],
+                    dayNamesMin: ['D', 'S', 'T', 'Q', 'Q', 'S', 'S', 'D'],
+                    dayNamesShort: ['Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sáb', 'Dom'],
+                    monthNames: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
+                    monthNamesShort: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'],
+                    nextText: 'Proximo',
+                    prevText: 'Anterior',
+                    showOn: "focus"
+                }
+            )
+            .css("display", "normal")
+            .next("button").button({
+                icons: { primary: "ui-icon-calendar" },
+                label: "Selecione uma data",
+                text: false 
+            });
+        });
+    </script>  
+
+
+    <script type="text/javascript">
+
+        function sum() {
+            var txtFirstNumberValue = document.getElementById('valor').value;
+            var full1 = txtFirstNumberValue.replace(',', '.');
+            var txtSecondNumberValue = document.getElementById('juro').value;
+            var full2 = txtSecondNumberValue.replace(',', '.');
+            var txtThirdNumberValue = document.getElementById('taxa').value;
+            var full3 = txtThirdNumberValue.replace(',', '.');
+            var txtFourthNumberValue = document.getElementById('desc').value;
+            var full4 = txtFourthNumberValue.replace(',', '.');
+            var result = parseFloat(txtFirstNumberValue) + parseFloat(txtSecondNumberValue) + parseFloat(txtThirdNumberValue) - parseFloat(txtFourthNumberValue);
+            var result1 = parseFloat(full1) + parseFloat(full2) + parseFloat(full3) - parseFloat(full4);
+            document.getElementById('rec').value = result1.toFixed(2).toString().replace('.', ',');
+        }
+
+    </script>
+
+    @Scripts.Render("~/plugins/iCheck")
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            $('.i-checks').iCheck({
+                checkboxClass: 'icheckbox_square-green',
+                radioClass: 'iradio_square-green',
+            });
+
+        });
+    </script>
+    <script type="text/javascript">
+        $(".touchspin1").TouchSpin({
+            min: 1,
+            max: 300,
+            step: 1,
+            buttondown_class: 'btn btn-white',
+            buttonup_class: 'btn btn-white'
+        });
+    </script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            var i = -1;
+            var toastCount = 0;
+            var $toastlast;
+            var getMessage = function () {
+                var msg = 'Hi, welcome to Inspinia. This is example of Toastr notification box.';
+                return msg;
+            };
+
+            $('#basictoast').click(function () {
+                // Display a success toast, with a title
+                toastr.success('Liquidação em andamento!')
+            });
+            $('#showtoast').click(function () {
+                var shortCutFunction = $("#toastTypeGroup input:radio:checked").val();
+                var msg = $('#message').val();
+                var title = $('#title').val() || '';
+                var $showDuration = $('#showDuration');
+                var $hideDuration = $('#hideDuration');
+                var $timeOut = $('#timeOut');
+                var $extendedTimeOut = $('#extendedTimeOut');
+                var $showEasing = $('#showEasing');
+                var $hideEasing = $('#hideEasing');
+                var $showMethod = $('#showMethod');
+                var $hideMethod = $('#hideMethod');
+                var toastIndex = toastCount++;
+                toastr.options = {
+                    closeButton: $('#closeButton').prop('checked'),
+                    debug: $('#debugInfo').prop('checked'),
+                    progressBar: $('#progressBar').prop('checked'),
+                    positionClass: $('#positionGroup input:radio:checked').val() || 'toast-top-right',
+                    onclick: null
+                };
+                if ($('#addBehaviorOnToastClick').prop('checked')) {
+                    toastr.options.onclick = function () {
+                        alert('You can perform some custom action after a toast goes away');
+                    };
+                }
+                if ($showDuration.val().length) {
+                    toastr.options.showDuration = $showDuration.val();
+                }
+                if ($hideDuration.val().length) {
+                    toastr.options.hideDuration = $hideDuration.val();
+                }
+                if ($timeOut.val().length) {
+                    toastr.options.timeOut = $timeOut.val();
+                }
+                if ($extendedTimeOut.val().length) {
+                    toastr.options.extendedTimeOut = $extendedTimeOut.val();
+                }
+                if ($showEasing.val().length) {
+                    toastr.options.showEasing = $showEasing.val();
+                }
+                if ($hideEasing.val().length) {
+                    toastr.options.hideEasing = $hideEasing.val();
+                }
+                if ($showMethod.val().length) {
+                    toastr.options.showMethod = $showMethod.val();
+                }
+                if ($hideMethod.val().length) {
+                    toastr.options.hideMethod = $hideMethod.val();
+                }
+                if (!msg) {
+                    msg = getMessage();
+                }
+                $("#toastrOptions").text("Command: toastr["
+                        + shortCutFunction
+                        + "](\""
+                        + msg
+                        + (title ? "\", \"" + title : '')
+                        + "\")\n\ntoastr.options = "
+                        + JSON.stringify(toastr.options, null, 2)
+                );
+                var $toast = toastr[shortCutFunction](msg, title); // Wire up an event handler to a button in the toast, if it exists
+                $toastlast = $toast;
+                if ($toast.find('#okBtn').length) {
+                    $toast.delegate('#okBtn', 'click', function () {
+                        alert('you clicked me. i was toast #' + toastIndex + '. goodbye!');
+                        $toast.remove();
+                    });
+                }
+                if ($toast.find('#surpriseBtn').length) {
+                    $toast.delegate('#surpriseBtn', 'click', function () {
+                        alert('Surprise! you clicked me. i was toast #' + toastIndex + '. You could perform an action here.');
+                    });
+                }
+            });
+            function getLastToast() {
+                return $toastlast;
+            }
+            $('#clearlasttoast').click(function () {
+                toastr.clear(getLastToast());
+            });
+            $('#cleartoasts').click(function () {
+                toastr.clear();
+            });
+
+        });
+    </script>
+
+    @if (ViewBag.Message != null)
+    {
+        <script type="text/javascript">
+            window.onload = function () {
+                  alert("@ViewBag.Message");
+            };
+        </script>
+    }
+}
