--- a/SMS_Presentation/Views/ContaReceber/VerAReceberMes.cshtml
+++ b/SMS_Presentation/Views/ContaReceber/VerAReceberMes.cshtml
@@ -1,7 +1,303 @@
-﻿
+﻿@using Presentation.Extensions
+@using CrossCutting;
+@using EntitiesServices.Work_Classes;
+@model EntitiesServices.Model.CONTA_RECEBER
 @{
-    ViewBag.Title = "VerAReceberMes";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
+}
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title"> 
+        <h3 class="title">Contas a Receber</h3> 
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaCR", "ContaReceber")">Contas a Receber</a>
+            </li>
+            <li class="active">
+                <strong>A Receber no Mês</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    <div class="row">
+        <div class="col-lg-3">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-primary pull-right">Hoje</span>
+                    <h5>A Receber no Mês</h5>
+                </div>
+                <div class="ibox-content">
+                    <h1 class="no-margins">@ViewBag.LR</h1>
+                    <div class="stat-percent font-bold text-navy">32% <i class="fa fa-level-up"></i></div>
+                    <small>Quantidade</small>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-primary pull-right">Hoje</span>
+                    <h5>A Receber no Mês</h5>
+                </div>
+                <div class="ibox-content">
+                    <h1 class="no-margins">@CrossCutting.Formatters.DecimalFormatter(ViewBag.Valor)</h1>
+                    <div class="stat-percent font-bold text-navy">32% <i class="fa fa-level-up"></i></div>
+                    <small>Valor a Receber</small>
+                </div>
+            </div>
+        </div>
+    </div>
+
+     <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Filtros</h5>
+                </div>
+
+                @using (Html.BeginForm("FiltrarAReceberMes", "ContaReceber", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal" }))
+                {
+                    <div class="ibox-content">
+                        <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                            <div class="col-lg-4 col-md-4 col-xs-12">
+                                Cliente
+                                <select name="CLIE_CD_ID" id="lstCliente" class="form-control" data-val="true" style="display: none;">
+                                    <option>Selecionar</option>
+                                </select>
+                                @*@Html.DropDownListFor(m => m.CLIE_CD_ID, (SelectList)ViewBag.Clientes, "Selecionar", new { @class = "form-control" })*@
+                            </div>
+                            <div class="col-lg-2 col-md-2 col-xs-12">
+                                Plano de Contas
+                                @Html.DropDownListFor(m => m.CECU_CD_ID, (SelectList)ViewBag.CC, "Selecionar", new { @class = "form-control" })
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-xs-12">
+                                Descrição
+                                @Html.TextBoxFor(m => m.CARE_DS_DESCRICAO, new { @class = "form-control", autofocus = true })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                             <div class="col-lg-4 col-md-4 col-xs-12">
+                                Data de Emissão
+                                @Html.TextBoxFor(m => m.CARE_DT_LANCAMENTO, "{0:dd/MM/yyyy}", new { @class = "form-control date-picker", autofocus = true })
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-xs-12">
+                                Data de Vencimento
+                                @Html.TextBoxFor(m => m.CARE_DT_VENCIMENTO, "{0:dd/MM/yyyy}", new { @class = "form-control date-picker", autofocus = true })
+                            </div>
+                        </div>
+                        <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                            <div class="col-lg-12 col-md-12 col-xs-12">
+                                @Html.ButtonActionSubmit(text: "Filtrar")
+                                @Html.ButtonLinkIndex(text: "Retirar Filtro", controller: "ContaReceber", action: "RetirarFiltroARecMes")
+                                @Html.ButtonLinkIndex(text: "Gerar Relatório", controller: "ContaReceber", action: "GerarRelatorioListaARecMes")
+                                @Html.ButtonLinkIndex(text: "Voltar", controller: "ContaReceber", action: "VoltarBaseCR")
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>A Receber no Mês</h5>
+                </div>
+                <div class="ibox-content">
+                    <div class="row">
+                            @if ((ViewBag.ListaCR as List<EntitiesServices.Model.CONTA_RECEBER>).Count > 0)                                        {
+                                <table class="table table-striped table-bordered table-hover dataTables-example">
+                                    <thead>
+                                        <tr>
+                                            <th>Cliente</th>   
+                                            <th>Centro de Custo</th>   
+                                            <th>Conta Bancária</th>
+                                            <th>Emissão</th>
+                                            <th>Valor</th>   
+                                            <th>Descrição</th>
+                                            <th>Vencimento</th>   
+                                            <th>Atraso</th>
+                                            <th class="td-one-action">Ações</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var cond in (ViewBag.ListaCR as List<EntitiesServices.Model.CONTA_RECEBER>))
+                                        {
+                                            <tr>
+                                                @if (cond.CLIENTE != null)
+                                                {
+                                                    <td>@cond.CLIENTE.CLIE_NM_NOME</td>
+                                                }
+                                                else
+                                                {
+                                                    <td>-</td>
+                                                }
+                                                @if (cond.CENTRO_CUSTO != null)
+                                                {
+                                                    <td>@cond.CENTRO_CUSTO.CECU_NM_NOME</td>
+                                                }
+                                                else
+                                                {
+                                                    <td>-</td>
+                                                }
+                                                @if (cond.CONTA_BANCO != null)
+                                                {
+                                                    <td>@cond.CONTA_BANCO.BANCO.BANC_NM_NOME @cond.CONTA_BANCO.COBA_NM_AGENCIA @cond.CONTA_BANCO.COBA_NR_CONTA</td>
+                                                }
+                                                else
+                                                {
+                                                    <td>-</td>
+                                                }
+                                                <td>@cond.CARE_DT_LANCAMENTO.Value.ToShortDateString()</td>
+                                                <td>@CrossCutting.Formatters.DecimalFormatter(cond.CARE_VL_VALOR)</td>
+                                                <td>@cond.CARE_DS_DESCRICAO</td>
+                                                <td>@cond.CARE_DT_VENCIMENTO.Value.ToShortDateString()</td>
+                                                @if (cond.CARE_NR_ATRASO > 0)
+	                                            {
+                                                    <td>@cond.CARE_NR_ATRASO</td>
+                                                }
+                                                else
+                                                {
+                                                    <td>-</td>
+                                                }
+                                                <td class="td-one-action">
+                                                    @Html.TableLinkDetails(cond.CARE_CD_ID, "VerCR","fa-search", "Consultar Lançamento")
+                                                </td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            }
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                                <div class="col-lg-12 col-md-12 col-xs-12">
+                                    @Html.ButtonLinkIndex(text: "Voltar", controller: "ContaReceber", action: "VoltarBaseCR")
+                                </div>
+                            </div>
+
+                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Styles {
+    <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />  
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
+    @Styles.Render("~/Content/plugins/iCheck/iCheckStyles")
+<link href="~/Content/plugins/select2/select2.min.css" rel="stylesheet" />
 }
 
-<h2>VerAReceberMes</h2>
+@section Scripts {
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    @Scripts.Render("~/plugins/sparkline")
+<script src="~/Scripts/plugins/select2/select2.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+    
+        <script>
+        $("#lstCliente").select2({
+            //data: filterSelect,
+            ajax: {
+                url: '../ContaReceber/BuscaNomeRazao',
+                type: 'POST',
+                data: function (params) {
+                    var query = {
+                        nome: params.term
+                    }
+                    return query
+                },
+                processResults: function (data) {
+                    console.log(data);
+                    return {
+                        results: data
+                    }
+                }
+            },
+            placeholder: 'Busque por NOME ou RAZÃO SOCIAL',
+            minimumInputLength: 1
+        });
+    </script>
+
+    @*<script type="text/javascript">
+        $(document).ready(function () {
+
+            $('.dataTables-example').DataTable({
+                pageLength: 25,
+                dom: '<"html5buttons"B>lTfgitp',
+                buttons: [
+                    { extend: 'copy' },
+                    { extend: 'csv' },
+                    { extend: 'excel', title: 'ExampleFile' },
+                    { extend: 'pdf', title: 'ExampleFile' },
+
+                    {
+                        extend: 'print',
+                        customize: function (win) {
+                            $(win.document.body).addClass('white-bg');
+                            $(win.document.body).css('font-size', '10px');
+
+                            $(win.document.body).find('table')
+                                    .addClass('compact')
+                                    .css('font-size', 'inherit');
+                        }
+                    }
+                ]
+
+            });
+
+           
+
+        });
+
+    </script>*@
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+        });
+    </script>
+    <script type="text/javascript" language="javascript">
+        $(function () {
+            $('.date-picker').datepicker(
+                {
+                    dateFormat: 'dd/mm/yy',
+                    dayNames: ['Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'],
+                    dayNamesMin: ['D', 'S', 'T', 'Q', 'Q', 'S', 'S', 'D'],
+                    dayNamesShort: ['Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sáb', 'Dom'],
+                    monthNames: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
+                    monthNamesShort: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'],
+                    nextText: 'Proximo',
+                    prevText: 'Anterior',
+                    showOn: "focus"
+                }
+            )
+            .css("display", "normal")
+            .next("button").button({
+                icons: { primary: "ui-icon-calendar" },
+                label: "Selecione uma data",
+                text: false 
+            });
+        });
+    </script>  
+
+}
+
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+    </script>
+}
 
