--- a/SMS_Presentation/Views/ContaReceber/VerLancamentosAtraso.cshtml
+++ b/SMS_Presentation/Views/ContaReceber/VerLancamentosAtraso.cshtml
@@ -17,7 +17,7 @@
                 <a href="@Url.Action("MontarTelaCR", "ContaReceber")">Contas a Receber</a>
             </li>
             <li class="active">
-                <strong>Recebimentos no Mês</strong>
+                <strong>Lançamentos em Atraso</strong>
             </li>
         </ol>
         <br />
@@ -27,7 +27,7 @@
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <span class="label label-primary pull-right">Hoje</span>
-                    <h5>Recebimentos no Mês</h5>
+                    <h5>Lançamentos em Atraso</h5>
                 </div>
                 <div class="ibox-content">
                     <h1 class="no-margins">@ViewBag.LR</h1>
@@ -40,25 +40,25 @@
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <span class="label label-primary pull-right">Hoje</span>
-                    <h5>Recebimentos no Mês</h5>
+                    <h5>Lançamentos em Atraso</h5>
                 </div>
                 <div class="ibox-content">
                     <h1 class="no-margins">@CrossCutting.Formatters.DecimalFormatter(ViewBag.Valor)</h1>
                     <div class="stat-percent font-bold text-navy">32% <i class="fa fa-level-up"></i></div>
-                    <small>Valor Recebido</small>
+                    <small>Valor em Atraso</small>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="row">
+     <div class="row">
         <div class="col-lg-12 col-md-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
                 <div class="ibox-title">
                     <h5>Filtros</h5>
                 </div>
 
-                @using (Html.BeginForm("FiltrarRecebimentoMes", "ContaReceber", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal" }))
+                @using (Html.BeginForm("FiltrarLancAtraso", "ContaReceber", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal" }))
                 {
                     <div class="ibox-content">
                         <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
@@ -87,16 +87,12 @@
                                 Data de Vencimento
                                 @Html.TextBoxFor(m => m.CARE_DT_VENCIMENTO, "{0:dd/MM/yyyy}", new { @class = "form-control date-picker", autofocus = true })
                             </div>
-                            <div class="col-lg-4 col-md-4 col-xs-12">
-                                Data de Liquidação
-                                @Html.TextBoxFor(m => m.CARE_DT_DATA_LIQUIDACAO, "{0:dd/MM/yyyy}", new { @class = "form-control date-picker", autofocus = true })
-                            </div>
                         </div>
                         <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
                             <div class="col-lg-12 col-md-12 col-xs-12">
                                 @Html.ButtonActionSubmit(text: "Filtrar")
-                                @Html.ButtonLinkIndex(text: "Retirar Filtro", controller: "ContaReceber", action: "RetirarFiltroRecMes")
-                                @Html.ButtonLinkIndex(text: "Gerar Relatório", controller: "ContaReceber", action: "GerarRelatorioListaRecMes")
+                                @Html.ButtonLinkIndex(text: "Retirar Filtro", controller: "ContaReceber", action: "RetirarFiltroLancAtraso")
+                                @Html.ButtonLinkIndex(text: "Gerar Relatório", controller: "ContaReceber", action: "GerarRelatorioListaLancAtraso")
                                 @Html.ButtonLinkIndex(text: "Voltar", controller: "ContaReceber", action: "VoltarBaseCR")
                             </div>
                         </div>
@@ -110,7 +106,7 @@
         <div class="col-lg-12 col-md-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>Recebimentos no Mês</h5>
+                    <h5>Lançamentos em Atraso</h5>
                 </div>
                 <div class="ibox-content">
                     <div class="row">
@@ -124,7 +120,7 @@
                                             <th>Emissão</th>
                                             <th>Valor</th>   
                                             <th>Descrição</th>
-                                            <th>Liquidada</th>   
+                                            <th>Vencimento</th>   
                                             <th>Atraso</th>
                                             <th class="td-one-action">Ações</th>
                                         </tr>
@@ -151,7 +147,7 @@
                                                 }
                                                 @if (cond.CONTA_BANCO != null)
                                                 {
-                                                    <td>@(cond.CONTA_BANCO.BANCO != null ? cond.CONTA_BANCO.BANCO.BANC_NM_NOME : "") @(cond.CONTA_BANCO.COBA_NM_AGENCIA != null ? cond.CONTA_BANCO.COBA_NM_AGENCIA : "") @(cond.CONTA_BANCO.COBA_NR_CONTA != null ? cond.CONTA_BANCO.COBA_NR_CONTA : "")</td>
+                                                    <td>@cond.CONTA_BANCO.BANCO.BANC_NM_NOME @cond.CONTA_BANCO.COBA_NM_AGENCIA @cond.CONTA_BANCO.COBA_NR_CONTA</td>
                                                 }
                                                 else
                                                 {
@@ -160,14 +156,7 @@
                                                 <td>@cond.CARE_DT_LANCAMENTO.Value.ToShortDateString()</td>
                                                 <td>@CrossCutting.Formatters.DecimalFormatter(cond.CARE_VL_VALOR)</td>
                                                 <td>@cond.CARE_DS_DESCRICAO</td>
-                                                @if (cond.CARE_IN_LIQUIDADA == 1)
-	                                            {
-                                                    <td>Sim</td>
-                                                }
-                                                else
-                                                {
-                                                    <td>Não</td>
-                                                }
+                                                <td>@cond.CARE_DT_VENCIMENTO.Value.ToShortDateString()</td>
                                                 @if (cond.CARE_NR_ATRASO > 0)
 	                                            {
                                                     <td>@cond.CARE_NR_ATRASO</td>
@@ -214,8 +203,8 @@
     @Scripts.Render("~/plugins/sparkline")
 <script src="~/Scripts/plugins/select2/select2.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
-    
-    <script>
+
+     <script>
         $("#lstCliente").select2({
             //data: filterSelect,
             ajax: {
@@ -238,7 +227,7 @@
             minimumInputLength: 1
         });
     </script>
-
+    
     @*<script type="text/javascript">
         $(document).ready(function () {
 
