--- a/SMS_Presentation/Views/Compra/MontarTelaPedidoCompra.cshtml
+++ b/SMS_Presentation/Views/Compra/MontarTelaPedidoCompra.cshtml
@@ -1,7 +1,425 @@
-﻿
-@{
-    ViewBag.Title = "MontarTelaPedidoCompra";
+﻿@using Presentation.Extensions
+@using CrossCutting;
+@model EntitiesServices.Model.PEDIDO_COMPRA
+@{ Layout = "~/Views/Shared/_Layout_Admin.cshtml"; }
+
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title">
+        <h3 class="title">Pedidos de Compra</h3>
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li class="active">
+                <strong>Pedidos de Compra</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    @if (ViewBag.Perfil == "ADM" || ViewBag.Perfil == "GER")
+    {
+        <div class="row">
+            <div class="col-lg-3">
+                <div class="ibox float-e-margins">
+                    <div class="ibox-title">
+                        <span class="label label-primary pull-right">Hoje</span>
+                        <h5>Pedidos de Compra</h5>
+                    </div>
+                    <div class="ibox-content">
+                        <h1 class="no-margins">@ViewBag.Pedidos</h1>
+                        <small>Pedidos Cadastrados</small>
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="ibox float-e-margins">
+                    <div class="ibox-title">
+                        <span class="label label-primary pull-right">Hoje</span>
+                        <h5>Pedidos de Compra</h5>
+                    </div>
+                    <div class="ibox-content">
+                        <h1 class="no-margins">@ViewBag.Atrasadas</h1>
+                        <small>Atrasados</small>
+                        <br />
+                        <br />
+                        @Html.ButtonLinkIndex(text: "Ver", controller: "Compra", action: "VerAtrasados", buttonClass: "white")
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="ibox float-e-margins">
+                    <div class="ibox-title">
+                        <span class="label label-primary pull-right">Hoje</span>
+                        <h5>Pedidos de Compra</h5>
+                    </div>
+                    <div class="ibox-content">
+                        <h1 class="no-margins">@ViewBag.Canceladas</h1>
+                        <small>Cancelados</small>
+                        <br />
+                        <br />
+                        @Html.ButtonLinkIndex(text: "Ver", controller: "Compra", action: "VerCancelados", buttonClass: "white")
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="ibox float-e-margins">
+                    <div class="ibox-title">
+                        <span class="label label-primary pull-right">Hoje</span>
+                        <h5>Pedidos de Compra</h5>
+                    </div>
+                    <div class="ibox-content">
+                        <h1 class="no-margins">@ViewBag.Encerradas</h1>
+                        <small>Encerrados</small>
+                        <br />
+                        <br />
+                        @Html.ButtonLinkIndex(text: "Ver", controller: "Compra", action: "VerEncerrados", buttonClass: "white")
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Filtros</h5>
+                </div>
+
+                @using (Html.BeginForm("FiltrarPedidoCompra", "Compra", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal" }))
+                {
+                    <div class="ibox-content">
+                        <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                            <div class="col-lg-3 col-md-3 col-xs-12">
+                                Autor
+                                @Html.DropDownListFor(m => m.USUA_CD_ID, (SelectList)ViewBag.Usuarios, "Selecionar", new { @class = "form-control" })
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-xs-12">
+                                Nome
+                                @Html.TextBoxFor(m => m.PECO_NM_NOME, new { @class = "form-control", autofocus = true })
+                            </div>
+                            <div class="col-lg-2 col-md-2 col-xs-12">
+                                Número
+                                @Html.TextBoxFor(m => m.PECO_NR_NUMERO, new { @class = "form-control", autofocus = true })
+                            </div>
+                            <div class="col-lg-2 col-md-2 col-xs-12">
+                                Nota Fiscal
+                                @Html.TextBoxFor(m => m.PECO_NR_NOTA_FISCAL, new { @class = "form-control", autofocus = true })
+                            </div>
+                            <div class="col-lg-2 col-md-2 col-xs-12">
+                                Status
+                                @Html.DropDownListFor(m => m.PECO_IN_STATUS, (SelectList)ViewBag.Status, "Selecionar", new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                            <div class="col-lg-2 col-md-2 col-xs-12">
+                                Data
+                                @Html.TextBoxFor(m => m.PECO_DT_DATA, "{0:dd/MM/yyyy}", new { @class = "form-control date-picker", autofocus = true })
+                            </div>
+                            <div class="col-lg-2 col-md-2 col-xs-12">
+                                Data Prevista
+                                @Html.TextBoxFor(m => m.PECO_DT_PREVISTA, "{0:dd/MM/yyyy}", new { @class = "form-control date-picker", autofocus = true })
+                            </div>
+                        </div>
+                        <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                            <div class="col-lg-12 col-md-12 col-xs-12">
+                                @Html.ButtonActionSubmit(text: "Filtrar")
+                                @Html.ButtonLinkIndex(text: "Retirar Filtro", controller: "Compra", action: "RetirarFiltroPedidoCompra")
+                                @Html.ButtonLinkIndex(text: "Exibir Todos", controller: "Compra", action: "MostrarTudoPedidoCompra")
+                                @Html.ButtonLinkIndex(text: "Novo Pedido", controller: "Compra", action: "IncluirPedidoCompra")
+                                @Html.ButtonLinkIndex(text: "Voltar", controller: "Compra", action: "Voltar")
+                            </div>
+                        </div>
+                    </div>
+                }
+
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Pedidos de Compra</h5>
+                </div>
+                <div class="ibox-content">
+                    @if (ViewBag.CotacaoEnvioSucesso == 1)
+                    {
+
+        <div class="alert alert-success">
+            <button type="button" class="close" data-dismiss="alert">Fechar</button>
+            SMS e Email enviados para o fornecedor
+
+        </div> }
+    else if (ViewBag.CotacaoEnvioSucesso == 2)
+    {
+
+<div class="alert alert-success">
+    <button type="button" class="close" data-dismiss="alert">Fechar</button>
+    Email enviado para o fornecedor
+
+</div>}
+
+                    @if (!ViewData.ModelState.IsValid)
+                    {
+
+        <div class="alert alert-danger">
+            <button type="button" class="close" data-dismiss="alert">Fechar</button>
+            @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+
+        </div>}
+
+                <div class="row">
+                    @if ((ViewBag.Listas as List
+                    <EntitiesServices.Model.PEDIDO_COMPRA>).Count > 0)
+                    {
+
+                <table class="table table-striped table-bordered table-hover dataTables-example">
+                    <thead>
+                        <tr>
+                            <th>Autor</th>
+                            <th>Nome</th>
+                            <th>Número</th>
+                            <th>Nota Fiscal</th>
+                            <th>Data</th>
+                            <th>Previsão</th>
+                            <th>Status</th>
+                            <th>Itens</th>
+                            <th class="td-one-action">Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var cond in (ViewBag.Listas as List
+                                        <EntitiesServices.Model.PEDIDO_COMPRA>))
+                        {
+
+                <tr>
+                    <td>@cond.USUARIO.USUA_NM_NOME</td>
+                    <td>@cond.PECO_NM_NOME</td>
+                    <td>@cond.PECO_NR_NUMERO</td>
+                    <td>@cond.PECO_NR_NOTA_FISCAL</td>
+                    <td>@cond.PECO_DT_DATA.Value.ToShortDateString()</td>
+                    <td>@cond.PECO_DT_PREVISTA.Value.ToShortDateString()</td>
+                    @if (cond.PECO_IN_STATUS == 1)
+                    {
+                        <td><span class="badge badge-warning">Para Cotação</span></td>
+                     }
+                    else if (cond.PECO_IN_STATUS == 2)
+                    {
+
+                        <td><span class="badge badge-warning">Em Cotação</span></td>
+                    }
+                    else if (cond.PECO_IN_STATUS == 3)
+                    {
+
+                        <td><span class="badge badge-primary">Para Aprovação</span></td>
+                    }
+                    else if (cond.PECO_IN_STATUS == 4)
+                    {
+
+                        <td><span class="badge badge-primary">Aprovado</span></td>
+                    }
+                    else if (cond.PECO_IN_STATUS == 5)
+                    {
+
+                        <td><span class="badge badge-primary">Para Receber</span></td>
+                    }
+                    else if (cond.PECO_IN_STATUS == 6)
+                    {
+
+                        <td><span class="badge badge-primary">Em Recebimento</span></td>
+                    }
+                    else if (cond.PECO_IN_STATUS == 7)
+                    {
+
+                        <td><span class="badge badge-success">Recebido</span></td>
+                    }
+                    else if (cond.PECO_IN_STATUS == 8)
+                    {
+
+                        <td><span class="badge badge-danger">Cancelado</span></td>
+                    }
+                    @if (cond.ITEM_PEDIDO_COMPRA != null)
+                    {
+
+                        <td>@cond.ITEM_PEDIDO_COMPRA.Where(x => x.ITPC_IN_ATIVO == 1).Count()</td>
+                     }
+                    else
+                    {
+
+                        <td>0</td>
+                    }
+
+                <td class="td-one-action">
+                    @if (cond.PECO_IN_STATUS == 1)
+                    {
+                        if (ViewBag.Perfil == "ADM")
+                        {
+                            <span>&nbsp;</span>
+                @Html.TableLinkDetails(cond.PECO_CD_ID, "EditarPedidoCompra", "fa-edit", "Editar/Consultar") }
+            else
+            {
+                            <span>&nbsp;</span>
+                @Html.TableLinkDetails(cond.PECO_CD_ID, "VerPedidoCompra", "fa-search", "Ver")}
+        }
+                    @if (cond.PECO_IN_STATUS == 1)
+                    {
+                        if (ViewBag.Perfil == "ADM")
+                        {
+                            if (cond.PECO_IN_ATIVO == 1)
+                            {
+                                <span>&nbsp;</span>
+                @Html.TableLinkDetails(cond.PECO_CD_ID, "ExcluirPedidoCompra", "fa-trash-o", "Desativar") }
+            else
+            {
+                                <span>&nbsp;</span>
+                @Html.TableLinkDetails(cond.PECO_CD_ID, "ReativarPedidoCompra", "fa-refresh", "Reativar")}
+        }
+    }
+                    @if (cond.PECO_IN_STATUS == 1)
+                    {
+                        <span>&nbsp;</span>
+                @Html.TableLinkDetails(cond.PECO_CD_ID, "EnviarCotacaoPedidoCompra", "fa-send", "Enviar para Cotação")
+                        <span>&nbsp;</span>
+                                        @Html.TableLinkDetails(cond.PECO_CD_ID, "CancelarPedidoCompra", "fa-thumbs-o-down", "Cancelar")}
+                    @if (cond.PECO_IN_STATUS == 2)
+                    {
+                        <span>&nbsp;</span>
+                @Html.TableLinkDetails(cond.PECO_CD_ID, "ProcessarCotacaoPedidoCompra", "fa-send", "Cotação")
+                    <span>&nbsp;</span>
+                                        @Html.TableLinkDetails(cond.PECO_CD_ID, "CancelarPedidoCompra", "fa-thumbs-o-down", "Cancelar") }
+                                    else if (cond.PECO_IN_STATUS == 3)
+                                    {
+                        <span>&nbsp;</span>
+                @Html.TableLinkDetails(cond.PECO_CD_ID, "ProcessarEnviarAprovacaoPedidoCompra", "fa-send-o", "Enviar para Aprovação")
+                        <span>&nbsp;</span>
+                                        @Html.TableLinkDetails(cond.PECO_CD_ID, "CancelarPedidoCompra", "fa-thumbs-o-down", "Cancelar") }
+                                    else if (cond.PECO_IN_STATUS == 4)
+                                    {
+                                        if (ViewBag.Perfil == "ADM")
+                                        {
+                            <span>&nbsp;</span>
+                                            @Html.TableLinkDetails(cond.PECO_CD_ID, "AprovarPedidoCompra", "fa-check", "Aprovação")
+                                        }
+                        <span>&nbsp;</span>
+                @Html.TableLinkDetails(cond.PECO_CD_ID, "CancelarPedidoCompra", "fa-thumbs-o-down", "Cancelar") }
+            else if (cond.PECO_IN_STATUS == 5)
+            {
+                        <span>&nbsp;</span>
+                @Html.TableLinkDetails(cond.PECO_CD_ID, "ProcessarReceberPedidoCompra", "fa-truck", "Receber") }
+            else if (cond.PECO_IN_STATUS == 6)
+            {
+                        <span>&nbsp;</span>
+                @Html.TableLinkDetails(cond.PECO_CD_ID, "ReceberPedidoCompra", "fa-envelope-open", "Receber")}
+            else if (cond.PECO_IN_STATUS == 7 || cond.PECO_IN_STATUS == 8)
+            {
+                <span>&nbsp;</span>
+                @Html.TableLinkDetails(cond.PECO_CD_ID, "VerPedidoCompra", "fa-search", "Ver")}
+                </td>
+                </tr>}
+
+                    </tbody>
+                </table>}
+
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Styles {
+
+    <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
+    @Styles.Render("~/Content/plugins/iCheck/iCheckStyles")
 }
 
-<h2>MontarTelaPedidoCompra</h2>
+@section Scripts {
 
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    @Scripts.Render("~/plugins/sparkline")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+   
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+            $('.date-picker').mask("99/99/9999");
+        });
+    </script>
+    <script type="text/javascript" language="javascript">
+        $(function () {
+            $('.date-picker').datepicker(
+                {
+                    dateFormat: 'dd/mm/yy',
+                    dayNames: ['Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'],
+                    dayNamesMin: ['D', 'S', 'T', 'Q', 'Q', 'S', 'S', 'D'],
+                    dayNamesShort: ['Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sáb', 'Dom'],
+                    monthNames: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
+                    monthNamesShort: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'],
+                    nextText: 'Proximo',
+                    prevText: 'Anterior',
+                    showOn: "focus"
+                }
+            )
+                .css("display", "normal")
+                .next("button").button({
+                    icons: { primary: "ui-icon-calendar" },
+                    label: "Selecione uma data",
+                    text: false
+                });
+        });
+    </script>
+     <script>
+        $(document).ready(function () {
+            DataTableEx.destroy();
+
+            $.fn.dataTable.moment('DD/MM/YYYY');
+
+            $('.dataTables-example').DataTable({
+                pageLength: lineCount,
+                dom: '<"html5buttons"B>lTfgitp',
+                buttons: [
+                    { extend: 'excel', title: 'ExampleFile' },
+                    { extend: 'pdf', title: 'ExampleFile' },
+                    {
+                        extend: 'print',
+                        customize: function (win) {
+                            $(win.document.body).addClass('white-bg');
+                            $(win.document.body).css('font-size', '10px');
+
+                            $(win.document.body).find('table')
+                                .addClass('compact')
+                                .css('font-size', 'inherit');
+                        }
+                    }
+                ]
+            });
+        });
+    </script>
+
+}
+
+@if (ViewBag.Message != null)
+{
+
+<script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+</script>}
