--- a/SMS_Presentation/Views/Shared/_Navigation_Admin.cshtml
+++ b/SMS_Presentation/Views/Shared/_Navigation_Admin.cshtml
@@ -92,6 +92,8 @@
                         </ul>
                     </li>
                     <li class="@Html.IsSelected(action: "MontarTelaEquipamento")"><a href="@Url.Action("MontarTelaEquipamento", "Equipamento")">Patrimônio</a></li>
+                    <li class="@Html.IsSelected(action: "MontarTelaPedidoCompra")"><a href="@Url.Action("MontarTelaPedidoCompra", "Compra")">Compras</a></li>
+                    <li class="@Html.IsSelected(action: "MontarTelaPedidoVenda")"><a href="@Url.Action("MontarTelaPedidoVenda", "Venda")">Pedidos de Venda</a></li>
                 </ul>
             </li>
 
