--- a/SMS_Presentation/Views/Compra/IncluirAcompanhamento.cshtml
+++ b/SMS_Presentation/Views/Compra/IncluirAcompanhamento.cshtml
@@ -1,7 +1,160 @@
-﻿
+﻿@using Presentation.Extensions
+@model SMS_Solution.ViewModels.PedidoCompraAcompanhamentoViewModel
 @{
-    ViewBag.Title = "IncluirAcompanhamento";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title"> 
+        <h3 class="title">Atendimentos</h3> 
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaPedidoCompra", "Compra")">Compras</a>
+            </li>
+            <li>
+                <a href="@Url.Action("EditarPedidoCompra", "Compra")">Compra - Edição</a>
+            </li>
+            <li class="active">
+                <strong>Compra - Incluir Acompanhamento</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Compra - Acompanhamento</h5>
+                </div>
+                @using (Html.BeginForm("IncluirAcompanhamento", "Compra", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", @id="pwd-container1" }))
+                {
+                    <div class="ibox-content">
+                        @Html.AntiForgeryToken()
+                        @if (!ViewData.ModelState.IsValid)
+                        {
+                            <div class="alert alert-danger">
+                                <button type="button" class="close" data-dismiss="alert">Fechar</button>
+                                @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+                            </div>
+                        }
+                        <div class="row">
+                            <div class="form-group">
+                                <div class="col-lg-12 col-md-12 col-sm-12">
+                                    <br />
+                                    @if (!String.IsNullOrEmpty(Model.USUARIO.USUA_AQ_FOTO))
+	                                {
+                                        <img src="@Url.Content(Model.USUARIO.USUA_AQ_FOTO)" style = "width: auto; height: auto; max-height: 110px; max-width: 90px;">
+                                    }
+                                    else
+                                    {
+                                        <img src="~/Imagens/Base/5.png" style = "width: auto; height: auto; max-height: 110px; max-width: 90px;">
+                                    }
+                                </div>                       
+                            </div>
+                            <div class="form-group">
+                                <div class="col-lg-12 col-md-12 col-sm-12">
+                                    <div class="col-lg-2 col-md-2 col-sm-12">
+                                        @Html.HiddenFor(m => m.PCAT_IN_ATIVO)
+                                        @Html.HiddenFor(m => m.PECO_CD_ID)
+                                        @Html.HiddenFor(m => m.USUA_CD_ID)
+                                        @Html.HiddenFor(m => m.PCAT_DT_ACOMPANHAMENTO)
+                                        Data
+                                        @Html.TextBoxFor(m => m.PCAT_DT_ACOMPANHAMENTO, "{0:dd/MM/yyyy HH:mm}", new { @class = "form-control", autofocus = true , @readonly="readonly"})
+                                    </div>
+                                    <div class="col-lg-5 col-md-5 col-sm-12">
+                                        Nome 
+                                        @Html.TextBoxFor(m => m.USUARIO.USUA_NM_NOME, new { @class = "form-control", autofocus = true , @readonly="readonly"})
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;"> 
+                                <div class="col-lg-12 col-md-12 col-xs-12">
+                                    Comentário
+                                    @Html.TextAreaFor(m => m.PCAT_DS_ACOMPANHAMENTO, new { @class = "form-control", style = "width: 100%; height: 200px;", autofocus = true })
+                                    @Html.ValidationMessageFor(m => m.PCAT_DS_ACOMPANHAMENTO, "", new { @style = "color:red" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.ButtonActionSubmit(text: "Confirma Criação de Acompanhamento")
+                            @Html.ButtonLinkIndex(text: "Voltar", action: "VoltarAnexoPedidoCompra", controller: "Compra")
+                        </div>
+                    </div>
+                }
+            </div>
+         </div>
+    </div>
+</div>
 
-<h2>IncluirAcompanhamento</h2>
+@section Styles {
+    <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />  
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
+    @Styles.Render("~/Content/plugins/iCheck/iCheckStyles")
+}
+@section Scripts {
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
 
+    <script type="text/javascript" language="javascript">
+        $(function () {
+            $('.date-picker').datepicker(
+                {
+                    dateFormat: 'dd/mm/yy',
+                    dayNames: ['Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'],
+                    dayNamesMin: ['D', 'S', 'T', 'Q', 'Q', 'S', 'S', 'D'],
+                    dayNamesShort: ['Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sáb', 'Dom'],
+                    monthNames: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
+                    monthNamesShort: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'],
+                    nextText: 'Proximo',
+                    prevText: 'Anterior',
+                    showOn: "focus"
+                }
+            )
+            .css("display", "normal")
+            .next("button").button({
+                icons: { primary: "ui-icon-calendar" },
+                label: "Selecione uma data",
+                text: false 
+            });
+        });
+    </script>  
+    
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+            $("#cep").mask("99999-999");
+        });
+    </script>
+
+    @Scripts.Render("~/plugins/iCheck")
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            $('.i-checks').iCheck({
+                checkboxClass: 'icheckbox_square-green',
+                radioClass: 'iradio_square-green',
+            });
+
+        });
+    </script>
+
+
+    @if (ViewBag.Message != null)
+    {
+        <script type="text/javascript">
+            window.onload = function () {
+                  alert("@ViewBag.Message");
+            };
+        </script>
+    }
+}
