--- a/SMS_Presentation/Views/Compra/IncluirItemPedidoCompra.cshtml
+++ b/SMS_Presentation/Views/Compra/IncluirItemPedidoCompra.cshtml
@@ -1,7 +1,365 @@
-﻿
+﻿@using Presentation.Extensions
+@model SMS_Solution.ViewModels.ItemPedidoCompraViewModel
 @{
-    ViewBag.Title = "IncluirItemPedidoCompra";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
 
-<h2>IncluirItemPedidoCompra</h2>
+<style>
+    /* Chrome, Safari, Edge, Opera */
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
 
+    /* Firefox */
+    input[type=number] {
+        -moz-appearance: textfield;
+    }
+</style>
+
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title"> 
+        <h3 class="title">Pedidos de Compra</h3> 
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaPedidoCompra", "Compra")">Pedidos de Compra</a>
+            </li>
+            <li>
+                <a href="@Url.Action("EditarPedidoCompra", "Compra")">Pedidos de Compra - Edição</a>
+            </li>
+            <li class="active">
+                <strong>Itens do Pedido - Inclusão</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Itens do Pedido - Inclusão</h5>
+                </div>
+                @using (Html.BeginForm("IncluirItemPedidoCompra", "Compra", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", @id="pwd-container1" }))
+                {
+                    <div class="ibox-content">
+                        @Html.AntiForgeryToken()
+                        @if (!ViewData.ModelState.IsValid)
+                        {
+                            <div class="alert alert-danger">
+                                <button type="button" class="close" data-dismiss="alert">Fechar</button>
+                                @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+                            </div>
+                        }
+                        <div class="row">
+                            <h4>Você poderá escolher entre comprar um PRODUTO ou um INSUMO, no mesmo pedido</h4>
+                        </div>
+                        <div class="row">
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">                
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    @Html.HiddenFor(m => m.PECO_CD_ID)
+                                    @Html.HiddenFor(m => m.ITPC_IN_ATIVO)
+                                    Tipo de Compra*
+                                    @Html.DropDownListFor(m => m.ITPC_IN_TIPO, (SelectList)ViewBag.Tipo, "Selecionar", new { @class = "form-control", @id = "tipo", onchange = "DesativaInsProd()" })    
+                                    @Html.ValidationMessageFor(m => m.ITPC_IN_TIPO, "",new { @style="color:red" })
+                                </div>
+                            </div>
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                                <div id="prodContainer" class="col-lg-3 col-md-3 col-xs-12">
+                                    Produto*
+                                    @Html.DropDownListFor(m => m.PROD_CD_ID, (SelectList)ViewBag.Produtos, "Selecionar", new { @class = "form-control", @id = "prod", onchange = "DesativaInsumo()" })
+                                    @Html.ValidationMessageFor(m => m.PROD_CD_ID, "", new { @style = "color:red" })
+                                </div>
+                                <div class="col-lg-1 col-md-1 col-xs-12">
+                                    Custo
+                                    <input type="text" class="form-control" id="custo" readonly="readonly" />
+                                </div>
+                                <div class="col-lg-1 col-md-1 col-xs-12">
+                                    Markup
+                                    <input type="text" class="form-control" id="markup" readonly="readonly" />
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    Unidade*
+                                    <input type="text" class="form-control" id="unidade" readonly="readonly" />
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    Quantidade*
+                                    @Html.TextBoxFor(m => m.ITPC_QN_QUANTIDADE, new { @class = "form-control", autofocus = true })
+                                    @Html.ValidationMessageFor(m => m.ITPC_QN_QUANTIDADE, "", new { @style = "color:red" })
+                                </div>
+                            </div>
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">                
+                                <div class="col-lg-12 col-md-12 col-xs-12">
+                                    Observação
+                                    @Html.TextAreaFor(m => m.ITPC_TX_OBSERVACOES, new { @class = "form-control", style = "width: 100%; height: 100px;", autofocus = true })
+                                    @Html.ValidationMessageFor(m => m.ITPC_TX_OBSERVACOES, "", new { @style = "color:red" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.ButtonActionSubmit(text: "Confirma Inclusão de Item de Pedido", htmlAttributes: new { id = "basictoast" })
+                            @Html.ButtonLinkIndex(text: "Cancelar", action: "VoltarAnexoPedidoCompra", controller: "Compra")
+                        </div>
+                    </div>
+                }
+            </div>
+         </div>
+    </div>
+</div>
+
+@section Styles {
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />  
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
+    @Styles.Render("~/Content/plugins/iCheck/iCheckStyles")
+    @Styles.Render("~/plugins/toastrStyles")
+}
+@section Scripts {
+    @Scripts.Render("~/plugins/toastr")
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+            $("#cep").mask("99999-999");
+        });
+    </script>
+    @Scripts.Render("~/plugins/iCheck")
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            $('.i-checks').iCheck({
+                checkboxClass: 'icheckbox_square-green',
+                radioClass: 'iradio_square-green',
+            });
+
+        });
+    </script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#ITPC_IN_TIPO').change(function () {
+                var ddlValue = $(this).val();
+
+                if (ddlValue == "1")
+                {
+                    $('#prod').show();
+                    $('#ins').hide();
+                }
+                else if (ddlValue == "2")
+                {
+                    $('#prod').hide();
+                    $('#ins').show();
+                }
+            });
+        });
+    </script>
+
+    <script type="text/javascript">
+        //$(document).ready(function () {
+        //    var ddlValue = $('#ITPC_IN_TIPO').val();
+
+        //    if (ddlValue == "1")
+        //    {
+        //        $('#prod').show();
+        //        $('#ins').hide();
+        //    }
+        //    else if (ddlValue == "2")
+        //    {
+        //        $('#prod').hide();
+        //        $('#ins').show();
+        //    }
+        //});
+    </script>
+
+
+
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            var i = -1;
+            var toastCount = 0;
+            var $toastlast;
+            var getMessage = function () {
+                var msg = 'Hi, welcome to Inspinia. This is example of Toastr notification box.';
+                return msg;
+            };
+
+            $('#basictoast').click(function () {
+                // Display a success toast, with a title
+                toastr.success('Inclusão em andamento!')
+            });
+            $('#showtoast').click(function () {
+                var shortCutFunction = $("#toastTypeGroup input:radio:checked").val();
+                var msg = $('#message').val();
+                var title = $('#title').val() || '';
+                var $showDuration = $('#showDuration');
+                var $hideDuration = $('#hideDuration');
+                var $timeOut = $('#timeOut');
+                var $extendedTimeOut = $('#extendedTimeOut');
+                var $showEasing = $('#showEasing');
+                var $hideEasing = $('#hideEasing');
+                var $showMethod = $('#showMethod');
+                var $hideMethod = $('#hideMethod');
+                var toastIndex = toastCount++;
+                toastr.options = {
+                    closeButton: $('#closeButton').prop('checked'),
+                    debug: $('#debugInfo').prop('checked'),
+                    progressBar: $('#progressBar').prop('checked'),
+                    positionClass: $('#positionGroup input:radio:checked').val() || 'toast-top-right',
+                    onclick: null
+                };
+                if ($('#addBehaviorOnToastClick').prop('checked')) {
+                    toastr.options.onclick = function () {
+                        alert('You can perform some custom action after a toast goes away');
+                    };
+                }
+                if ($showDuration.val().length) {
+                    toastr.options.showDuration = $showDuration.val();
+                }
+                if ($hideDuration.val().length) {
+                    toastr.options.hideDuration = $hideDuration.val();
+                }
+                if ($timeOut.val().length) {
+                    toastr.options.timeOut = $timeOut.val();
+                }
+                if ($extendedTimeOut.val().length) {
+                    toastr.options.extendedTimeOut = $extendedTimeOut.val();
+                }
+                if ($showEasing.val().length) {
+                    toastr.options.showEasing = $showEasing.val();
+                }
+                if ($hideEasing.val().length) {
+                    toastr.options.hideEasing = $hideEasing.val();
+                }
+                if ($showMethod.val().length) {
+                    toastr.options.showMethod = $showMethod.val();
+                }
+                if ($hideMethod.val().length) {
+                    toastr.options.hideMethod = $hideMethod.val();
+                }
+                if (!msg) {
+                    msg = getMessage();
+                }
+                $("#toastrOptions").text("Command: toastr["
+                        + shortCutFunction
+                        + "](\""
+                        + msg
+                        + (title ? "\", \"" + title : '')
+                        + "\")\n\ntoastr.options = "
+                        + JSON.stringify(toastr.options, null, 2)
+                );
+                var $toast = toastr[shortCutFunction](msg, title); // Wire up an event handler to a button in the toast, if it exists
+                $toastlast = $toast;
+                if ($toast.find('#okBtn').length) {
+                    $toast.delegate('#okBtn', 'click', function () {
+                        alert('you clicked me. i was toast #' + toastIndex + '. goodbye!');
+                        $toast.remove();
+                    });
+                }
+                if ($toast.find('#surpriseBtn').length) {
+                    $toast.delegate('#surpriseBtn', 'click', function () {
+                        alert('Surprise! you clicked me. i was toast #' + toastIndex + '. You could perform an action here.');
+                    });
+                }
+            });
+            function getLastToast() {
+                return $toastlast;
+            }
+            $('#clearlasttoast').click(function () {
+                toastr.clear(getLastToast());
+            });
+            $('#cleartoasts').click(function () {
+                toastr.clear();
+            });
+
+        });
+    </script>
+
+    <script>
+        function DesativaInsumo() {
+            var optProd = $('#prod option:selected').val();
+
+            $.ajax({
+                url: '../Compra/GetCustoProduto'
+                , type: 'POST'
+                , data: {
+                    id: $('#prod option:selected').val()
+                }
+                , async: false
+                , success: function (r) {
+                    $('#custo').val(r.custo == null ? "-" : r.custo);
+                    $('#unidade').val(r.unidade == null ? "-" : r.unidade);
+                    $('#markup').val(r.markup == null ? "-" : r.markup);
+                }
+            });
+
+            if (optProd != "") {
+                $('#insContainer').css("display", "none");
+            } else {
+                $('#insContainer').css("display", "block");
+            }
+        }
+
+        function DesativaProduto() {
+            var optIns = $('#ins option:selected').val();
+
+            $.ajax({
+                url: '../Compra/GetCustoInsumo'
+                , type: 'POST'
+                , data: {
+                    id: $('#ins option:selected').val()
+                }
+                , async: false
+                , success: function (r) {
+                    $('#custo').val(r.custo == null ? "-" : r.custo);
+                    $('#unidade').val(r.unidade == null ? "-" : r.unidade);
+                    $('#markup').val("-");
+                }
+            });
+
+            if (optIns != "") {
+                $('#prodContainer').css("display", "none");
+            } else {
+                $('#prodContainer').css("display", "block");
+            }
+        }
+
+        function DesativaInsProd() {
+            var optTipo = $('#tipo option:selected').val();
+
+            if (optTipo != "") {
+                if (optTipo == 1) {
+                    $('#insContainer').css("display", "none");
+                    $('#prodContainer').css("display", "block");
+                    $("#ins").val($("#ins option:first").val());
+                } else {
+                    $('#prodContainer').css("display", "none");
+                    $('#insContainer').css("display", "block");
+                    $("#prod").val($("#prod option:first").val());
+                }
+            } else {
+                $('#prodContainer').css("display", "block");
+                $('#insContainer').css("display", "block");
+            }
+        }
+    </script>
+
+    @if (ViewBag.Message != null)
+    {
+        <script type="text/javascript">
+            window.onload = function () {
+                  alert("@ViewBag.Message");
+            };
+        </script>
+    }
+}
