--- a/SMS_Presentation/Views/Compra/ReativarItemPedidoCompra.cshtml
+++ b/SMS_Presentation/Views/Compra/ReativarItemPedidoCompra.cshtml
@@ -1,7 +1,222 @@
-﻿
+﻿@using Presentation.Extensions
+@model SMS_Solution.ViewModels.ItemPedidoCompraViewModel
 @{
-    ViewBag.Title = "ReativarItemPedidoCompra";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title"> 
+        <h3 class="title">Item de Pedido de Compra</h3> 
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaPedidoCompra", "Compra")">Pedidos de Compra</a>
+            </li>
+            <li class="active">
+                <strong>Itens de Pedidos de Compra - Reativação</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Pedidos de Compra - Reativação</h5>
+                </div>
+                @using (Html.BeginForm("ReativarItemPedidoCompra", "Compra", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", @id="pwd-container1" }))
+                {
+                    <div class="ibox-content">
+                        @Html.AntiForgeryToken()
+                        @if (!ViewData.ModelState.IsValid)
+                        {
+                            <div class="alert alert-danger">
+                                <button type="button" class="close" data-dismiss="alert">Fechar</button>
+                                @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+                            </div>
+                        }
+                        <div class="row">
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">                
+                                <div class="col-lg-12 col-md-12 col-xs-12">
+                                    @Html.HiddenFor(m => m.PECO_CD_ID)
+                                    @Html.HiddenFor(m => m.ITPC_IN_ATIVO)
+                                    @Html.HiddenFor(m => m.ITPC_CD_ID)
+                                    @Html.HiddenFor(m => m.PROD_CD_ID)
+                                    @Html.HiddenFor(m => m.UNID_CD_ID)
+                                    @Html.HiddenFor(m => m.ITPC_IN_TIPO)
+                                    @Html.HiddenFor(m => m.ITPC_NR_QUANTIDADE_REVISADA)
+                                    @Html.HiddenFor(m => m.ITPC_VL_PRECO_SELECIONADO)
+                                    @Html.HiddenFor(m => m.ITPC_DT_COTACAO)
+                                    @Html.HiddenFor(m => m.ITPC_TX_OBSERVACOES)
+                                </div>
+                                <div class="form-group" style="margin-left: 15px;">
+                                    @if (Model.ITPC_IN_TIPO == 1)
+                                    {
+                                        <div id="prodContainer" class="col-lg-3 col-md-3 col-xs-12">
+                                            Produto*
+                                            @Html.TextBoxFor(m => m.PRODUTO.PROD_NM_NOME, new { @class = "form-control", @id = "prod", @readonly = "readonly" })
+                                        </div>
+                                        <div class="col-lg-1 col-md-1 col-xs-12">
+                                            Custo
+                                            @Html.TextBoxFor(m => m.PRODUTO.PROD_VL_CUSTO, new { @class = "form-control", @readonly = "readonly" })
+                                        </div>
+                                        <div class="col-lg-1 col-md-1 col-xs-12">
+                                            Markup
+                                            @Html.TextBoxFor(m => m.PRODUTO.PROD_VL_MARKUP_PADRAO, new { @class = "form-control", @readonly = "readonly" })
+                                        </div>
+                                    }
+                                    <div class="col-lg-2 col-md-2 col-xs-12">
+                                        Unidade*
+                                        @Html.TextBoxFor(m => m.UNIDADE.UNID_NM_NOME, new { @class = "form-control", @readonly = "readonly" })
+                                    </div>
+                                    <div class="col-lg-2 col-md-2 col-xs-12">
+                                        Quantidade*
+                                        @Html.TextBoxFor(m => m.ITPC_QN_QUANTIDADE, new { @class = "form-control", autofocus = true, @readonly = "readonly" })
+                                        @Html.ValidationMessageFor(m => m.ITPC_QN_QUANTIDADE, "", new { @style = "color:red" })
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.ButtonActionSubmit(text: "Confirma reativação de Item de Pedido", htmlAttributes: new { id = "basictoast" })
+                            @Html.ButtonLinkIndex(text: "Cancelar", action: "VoltarAnexoPedidoCompra", controller: "Compra")
+                        </div>
+                    </div>
+                }
+            </div>
+         </div>
+    </div>
+</div>
 
-<h2>ReativarItemPedidoCompra</h2>
+@section Styles {
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />  
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
+    @Styles.Render("~/plugins/toastrStyles")
+}
+@section Scripts {
+    @Scripts.Render("~/plugins/toastr")
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
 
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+            $("#cep").mask("99999-999");
+        });
+    </script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            var i = -1;
+            var toastCount = 0;
+            var $toastlast;
+            var getMessage = function () {
+                var msg = 'Hi, welcome to Inspinia. This is example of Toastr notification box.';
+                return msg;
+            };
+
+            $('#basictoast').click(function () {
+                // Display a success toast, with a title
+                toastr.success('Exclusão em andamento!')
+            });
+            $('#showtoast').click(function () {
+                var shortCutFunction = $("#toastTypeGroup input:radio:checked").val();
+                var msg = $('#message').val();
+                var title = $('#title').val() || '';
+                var $showDuration = $('#showDuration');
+                var $hideDuration = $('#hideDuration');
+                var $timeOut = $('#timeOut');
+                var $extendedTimeOut = $('#extendedTimeOut');
+                var $showEasing = $('#showEasing');
+                var $hideEasing = $('#hideEasing');
+                var $showMethod = $('#showMethod');
+                var $hideMethod = $('#hideMethod');
+                var toastIndex = toastCount++;
+                toastr.options = {
+                    closeButton: $('#closeButton').prop('checked'),
+                    debug: $('#debugInfo').prop('checked'),
+                    progressBar: $('#progressBar').prop('checked'),
+                    positionClass: $('#positionGroup input:radio:checked').val() || 'toast-top-right',
+                    onclick: null
+                };
+                if ($('#addBehaviorOnToastClick').prop('checked')) {
+                    toastr.options.onclick = function () {
+                        alert('You can perform some custom action after a toast goes away');
+                    };
+                }
+                if ($showDuration.val().length) {
+                    toastr.options.showDuration = $showDuration.val();
+                }
+                if ($hideDuration.val().length) {
+                    toastr.options.hideDuration = $hideDuration.val();
+                }
+                if ($timeOut.val().length) {
+                    toastr.options.timeOut = $timeOut.val();
+                }
+                if ($extendedTimeOut.val().length) {
+                    toastr.options.extendedTimeOut = $extendedTimeOut.val();
+                }
+                if ($showEasing.val().length) {
+                    toastr.options.showEasing = $showEasing.val();
+                }
+                if ($hideEasing.val().length) {
+                    toastr.options.hideEasing = $hideEasing.val();
+                }
+                if ($showMethod.val().length) {
+                    toastr.options.showMethod = $showMethod.val();
+                }
+                if ($hideMethod.val().length) {
+                    toastr.options.hideMethod = $hideMethod.val();
+                }
+                if (!msg) {
+                    msg = getMessage();
+                }
+                $("#toastrOptions").text("Command: toastr["
+                        + shortCutFunction
+                        + "](\""
+                        + msg
+                        + (title ? "\", \"" + title : '')
+                        + "\")\n\ntoastr.options = "
+                        + JSON.stringify(toastr.options, null, 2)
+                );
+                var $toast = toastr[shortCutFunction](msg, title); // Wire up an event handler to a button in the toast, if it exists
+                $toastlast = $toast;
+                if ($toast.find('#okBtn').length) {
+                    $toast.delegate('#okBtn', 'click', function () {
+                        alert('you clicked me. i was toast #' + toastIndex + '. goodbye!');
+                        $toast.remove();
+                    });
+                }
+                if ($toast.find('#surpriseBtn').length) {
+                    $toast.delegate('#surpriseBtn', 'click', function () {
+                        alert('Surprise! you clicked me. i was toast #' + toastIndex + '. You could perform an action here.');
+                    });
+                }
+            });
+            function getLastToast() {
+                return $toastlast;
+            }
+            $('#clearlasttoast').click(function () {
+                toastr.clear(getLastToast());
+            });
+            $('#cleartoasts').click(function () {
+                toastr.clear();
+            });
+
+        });
+    </script>
+    @if (ViewBag.Message != null)
+    {
+        <script type="text/javascript">
+            window.onload = function () {
+                  alert("@ViewBag.Message");
+            };
+        </script>
+    }
+}
