--- a/SMS_Presentation/Views/Compra/VerCancelados.cshtml
+++ b/SMS_Presentation/Views/Compra/VerCancelados.cshtml
@@ -1,7 +1,270 @@
-﻿
+﻿@using Presentation.Extensions
+@using CrossCutting;
+@model EntitiesServices.Model.PEDIDO_COMPRA
 @{
-    ViewBag.Title = "VerCancelados";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
+}
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title"> 
+        <h3 class="title">Pedidos de Compras</h3> 
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaPedidoCompra", "Compra")">Pedidos de Compras</a>
+            </li>
+            <li class="active">
+                <strong>Pedidos de Compras - Cancelados</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+
+     <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Filtros</h5>
+                </div>
+
+                @using (Html.BeginForm("FiltrarCancelados", "Compra", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal" }))
+                {
+                    <div class="ibox-content">
+                        <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                            <div class="col-lg-3 col-md-3 col-xs-12">
+                                Número
+                                @Html.TextBoxFor(m => m.PECO_NR_NUMERO, new { @class = "form-control", autofocus = true })
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-xs-12">
+                                Data de Vencimento
+                                @Html.TextBoxFor(m => m.PECO_DT_FINAL, new { @class = "form-control date-picker", autofocus = true })
+                            </div>
+                            <div class="col-lg-2 col-md-2 col-xs-12">
+                                Nome
+                                @Html.TextBoxFor(m => m.PECO_NM_NOME, new { @class = "form-control", autofocus = true })
+                            </div>
+                            <div class="col-lg-2 col-md-2 col-xs-12">
+                                Autor
+                                @Html.DropDownListFor(m => m.USUA_CD_ID, (SelectList)ViewBag.Usuarios, "Selecionar", new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                            <div class="col-lg-12 col-md-12 col-xs-12">
+                                @Html.ButtonActionSubmit(text: "Filtrar")
+                                @Html.ButtonLinkIndex(text: "Retirar Filtro", controller: "Compra", action: "RetirarFiltroCancelados")
+                                @Html.ButtonLinkIndex(text: "Voltar", action: "MontarTelaPedidoCompra", controller: "Compra")
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Pedidos de Compras - Cancelados</h5>
+                </div>
+                <div class="ibox-content">
+                    @if (!ViewData.ModelState.IsValid)
+                    {
+                        <div class="alert alert-danger">
+                            <button type="button" class="close" data-dismiss="alert">Fechar</button>
+                            @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+
+                        </div>
+                    }
+                    <div class="row">
+                        <div class="form-group">
+                            @Html.ButtonLinkIndex(text: "Voltar", action: "MontarTelaPedidoCompra", controller: "Compra")
+                        </div>
+                    </div>
+                    <div class="row">
+                            @if ((ViewBag.CanceladasLista as List<EntitiesServices.Model.PEDIDO_COMPRA>).Count > 0)                                        {
+                                <table class="table table-striped table-bordered table-hover dataTables-example">
+                                    <thead style ="background-color:lightsteelblue">
+                                        <tr>
+                                            <th>Autor</th>   
+                                            <th>Nome</th>   
+                                            <th>Número</th>
+                                            <th>Nota Fiscal</th>
+                                            <th>Data</th>   
+                                            <th>Previsão</th>   
+                                            <th>Status</th>   
+                                            <th class="td-one-action">Ações</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var cond in (ViewBag.CanceladasLista as List<EntitiesServices.Model.PEDIDO_COMPRA>))
+                                        {
+                                            <tr>
+                                                <td>@cond.USUARIO.USUA_NM_NOME</td>
+                                                <td>@cond.PECO_NM_NOME</td>
+                                                <td>@cond.PECO_NR_NUMERO</td>
+                                                <td>@cond.PECO_NR_NOTA_FISCAL</td>
+                                                <td>@cond.PECO_DT_DATA.Value.ToShortDateString()</td>
+                                                <td>@cond.PECO_DT_PREVISTA.Value.ToShortDateString()</td>
+                                                @if (cond.PECO_IN_STATUS == 1)
+                                                {
+                                                    <td><span class="badge badge-warning">Para Cotação</span></td>
+                                                 }
+                                                else if (cond.PECO_IN_STATUS == 2)
+                                                {
+
+                                                    <td><span class="badge badge-warning">Em Cotação</span></td>
+                                                }
+                                                else if (cond.PECO_IN_STATUS == 3)
+                                                {
+
+                                                    <td><span class="badge badge-primary">Para Aprovação</span></td>
+                                                }
+                                                else if (cond.PECO_IN_STATUS == 4)
+                                                {
+
+                                                    <td><span class="badge badge-primary">Aprovado</span></td>
+                                                }
+                                                else if (cond.PECO_IN_STATUS == 5)
+                                                {
+
+                                                    <td><span class="badge badge-primary">Para Receber</span></td>
+                                                }
+                                                else if (cond.PECO_IN_STATUS == 6)
+                                                {
+
+                                                    <td><span class="badge badge-primary">Em Recebimento</span></td>
+                                                }
+                                                else if (cond.PECO_IN_STATUS == 7)
+                                                {
+
+                                                    <td><span class="badge badge-success">Recebido</span></td>
+                                                }
+                                                else if (cond.PECO_IN_STATUS == 8)
+                                                {
+
+                                                    <td><span class="badge badge-danger">Cancelado</span></td>
+                                                }
+                                                <td class="td-one-action">
+                                                    @Html.TableLinkDetails(cond.PECO_CD_ID, "VerPedidoCompra","fa-search", "Ver")
+                                                </td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            }
+                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Styles {
+    <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />  
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
+    @Styles.Render("~/plugins/sweetAlertStyles")
 }
 
-<h2>VerCancelados</h2>
+@section Scripts {
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    @Scripts.Render("~/plugins/sweetAlert")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+    
+   <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+            $('.date-picker').mask('99/99/9999');
+        });
+    </script>
+
+     <script type="text/javascript" language="javascript">
+        $(function () {
+            $('.date-picker').datepicker(
+                {
+                    dateFormat: 'dd/mm/yy',
+                    dayNames: ['Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'],
+                    dayNamesMin: ['D', 'S', 'T', 'Q', 'Q', 'S', 'S', 'D'],
+                    dayNamesShort: ['Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sáb', 'Dom'],
+                    monthNames: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
+                    monthNamesShort: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'],
+                    nextText: 'Proximo',
+                    prevText: 'Anterior',
+                    showOn: "focus"
+                }
+            )
+            .css("display", "normal")
+            .next("button").button({
+                icons: { primary: "ui-icon-calendar" },
+                label: "Selecione uma data",
+                text: false 
+            });
+        });
+    </script> 
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            $('.demo3').click(function () {
+                swal({
+                    title: "Confirma a duplicação do produto?",
+                    text: "A tela de edição deste produto será aberta logo após a confirmação",
+                    type: "warning",
+                    showCancelButton: true,
+                    confirmButtonColor: "#DD6B55",
+                    confirmButtonText: "Confirmar",
+                    cancelButtonText: "Cancelar",
+                   closeOnConfirm: false
+                }, function () {
+                    swal("Duplicado!", "Uma cópia deste produto foi criada", "success");
+                });
+            });
+        });
+    </script>
+     <script>
+        $(document).ready(function () {
+            DataTableEx.destroy();
+
+            $.fn.dataTable.moment('DD/MM/YYYY');
+
+            $('.dataTables-example').DataTable({
+                pageLength: lineCount,
+                dom: '<"html5buttons"B>lTfgitp',
+                buttons: [
+                    { extend: 'excel', title: 'ExampleFile' },
+                    { extend: 'pdf', title: 'ExampleFile' },
+                    {
+                        extend: 'print',
+                        customize: function (win) {
+                            $(win.document.body).addClass('white-bg');
+                            $(win.document.body).css('font-size', '10px');
+
+                            $(win.document.body).find('table')
+                                .addClass('compact')
+                                .css('font-size', 'inherit');
+                        }
+                    }
+                ]
+            });
+        });
+    </script>
+}
+
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+    </script>
+}
+
 
